- integrate map kit and core location to give users a view of the course

--- a/GolfScorecard/Base.lproj/Main.storyboard
+++ b/GolfScorecard/Base.lproj/Main.storyboard
@@ -462,6 +462,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="17P-AT-tnh"/>
+                    <connections>
+                        <outlet property="mapView" destination="r1e-Ik-C8V" id="LPy-uM-bCf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="062-IL-jBG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
